# belly

./: Cargo.toml
crates/belly_core/: Cargo.toml
crates/belly_core/src/: lib.rs
crates/belly_macro/: Cargo.toml
crates/belly_widgets/: Cargo.toml
